@@ -168,7 +168,7 @@
                         ],
                         "additionalSubtitleTracks": [
                             "SPA",
-                            "GER"
+                            "FRA"
                         ],
                         "bonusFeatures": [
                             "Bonus Features"
